zigbee: aligned to spec and fixed some bugs.